--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 
     <!------ Stylesheet ------>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./contents/css/styles.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <div class="navbar">
 
             <div class="nav-heading">
-                <img id="logo" src="logo.png" alt="logo">
+                <img id="logo" src="./contents/images/logo.png" alt="logo">
                 <h3 id="nav-title">ProTrack</h3>
             </div>
 
@@ -40,7 +40,7 @@
             </div>
 
             <div class="nav-share">
-                <img src="nav_image.svg" alt="image" id="nav-img">
+                <img src="./contents/images/nav_image.svg" alt="image" id="nav-img">
                 <div class="share-content">
                     <div class="share-head">Share Your Progress</div>
                     <!-- <p>Share your Progress with your Friends and Family</p> -->
@@ -77,32 +77,32 @@
                 <div class="activity-box">
                     <div class="box" id="class">
                         <div class="box-image color-blue">
-                            <img src="box1.svg" alt="Lectures">
+                            <img src="./contents/images/box1.svg" alt="Lectures">
                         </div>
                         <div class="box-head">College Lectures</div>
                         <div class="box-para">12 lectues</div>
                         <div class="box-icon">
-                            <img src="box_arrow.png" alt="arrow" class="color-blue">
+                            <img src="./contents/images/box_arrow.png" alt="arrow" class="color-blue">
                         </div>
                     </div>
                     <div class="box" id="self">
                         <div class="box-image color-purple">
-                            <img src="box2.png" alt="Study">
+                            <img src="./contents/images/box2.png" alt="Study">
                         </div>
                         <div class="box-head">Self Study</div>
                         <div class="box-para">8 skills</div>
                         <div class="box-icon">
-                            <img src="box_arrow.png" alt="arrow" class="color-purple">
+                            <img src="./contents/images/box_arrow.png" alt="arrow" class="color-purple">
                         </div>
                     </div>
                     <div class="box" id="extra">
                         <div class="box-image color-yellow">
-                            <img src="box3.png" alt="Extra-curricular">
+                            <img src="./contents/images/box3.png" alt="Extra-curricular">
                         </div>
                         <div class="box-head">Extra-curricular</div>
                         <div class="box-para">6 activities</div>
                         <div class="box-icon">
-                            <img src="box_arrow.png" alt="arrow" class="color-yellow">
+                            <img src="./contents/images/box_arrow.png" alt="arrow" class="color-yellow">
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
 
                 <div class="course-bullet">
                     <div class="course-image">
-                        <img src="web_design.png" alt="Web Design">
+                        <img src="./contents/images/web_design.png" alt="Web Design">
                         <div>Web Design</div>
                     </div>
                     <div>Jul 20</div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="course-bullet">
                     <div class="course-image">
-                        <img src="c++.png" alt="c++">
+                        <img src="./contents/images/c++.png" alt="c++">
                         <div>OOPS</div>
                     </div>
                     <div>Aug 3</div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="course-bullet">
                     <div class="course-image">
-                        <img src="dbms.png" alt="DBMS">
+                        <img src="./contents/images/dbms.png" alt="DBMS">
                         <div>DBMS</div>
                     </div>
                     <div>Aug 15</div>
@@ -166,12 +166,12 @@
                 
             <div class="profile-details">
                 <div class="profile-image">
-                    <img src="female_dp.png" alt="Profile Picture">
+                    <img src="./contents/images/female_dp.png" alt="Profile Picture">
                 </div>
                 <div class="profile-info">
                     <div class="profile-name"> 
                         <div class="name">Jiya Damara</div> 
-                        <img src="tick.png" alt="Verified">
+                        <img src="./contents/images/tick.png" alt="Verified">
                     </div>
                     <div class="profile-email"> damarajiya@gmail.com </div>
                 </div>
